# damsl-281-2025

./: README.md
lecture notes/code/: pyproject.toml
lecture notes/code/notebooks/01-concurency/: 00-threads-vs-processes.ipynb  01-threads.ipynb  02-threads-advanced.ipynb  03-processes.ipynb  04-processes-advanced.ipynb  mp_tasks.py
lecture notes/code/notebooks/01-concurrency/: mp_tasks.py
lecture notes/code/notebooks/02-numpy/: 01-vectorization.ipynb  02-broadcasting.ipynb  03-indexing.ipynb
lecture notes/slides/: index.html
lecture notes/slides/slides/: 01-concurrency.md
lecture-notes/code/: pyproject.toml
lecture-notes/code/notebooks/01-concurrency/: 03-processes.ipynb  04-processes-advanced.ipynb
lecture-notes/code/notebooks/02-numpy/: 00-benchmarking.ipynb  04-memory.ipynb  05-strides.ipynb
lecture-notes/code/notebooks/03-pytorch/: 00-computational-graph.ipynb  01-derivatives.ipynb  02-backward.ipynb  03-grad.ipynb  04-func.ipynb  05-vjp.ipynb  06-laplacian.ipynb
lecture-notes/code/notebooks/04-flax/: 00-functional-programming.ipynb  01-fp-example.ipynb  02-jax.ipynb  03-jax-advanced.ipynb  04-jax-vectorization.ipynb  05-flax-intro.ipynb  06-flax-train.ipynb  07-vmap.ipynb  questions.md
