[project]
name = "code"
version = "0.1.0"
description = "Code used in lectures of the Scientific ML course in DAMSL, UOC"
authors = [
    {name = "G. Arampatzis"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "line-profiler (>=5.0.0,<6.0.0)",
    "numpy (==1.26.4)",
    "torch (==2.2.2)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torchviz (>=0.0.3,<0.0.4)",
    "jax (==0.4.26)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
